--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <header class="header">
     <a href="index.html"><img src="./images/header-logo.svg" alt="Лого Россия" class="header__logo"></a>
     <nav class="header__lang-switch">
-      <a href="" class="header__lang-link">Ru</a>
-      <a href="" class="header__lang-link">En</a>
+      <a href="#" class="header__lang-link link-hover">Ru</a>
+      <a href="#" class="header__lang-link link-hover">En</a>
     </nav>
   </header>
   <main>
