--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a href="https://park-kosa.ru" class="website__link link-hover">park-kosa.ru</a>
           </nav>
           <img src="./images/place-kosa.jpg" alt="Куршская коса фото" class="place__image">
-          <article class="two-paragraphs">
+          <article class="paragraphs">
             <p class="place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">
@@ -93,7 +93,7 @@
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link link-hover">National Geographic</a>
           </nav>
           <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
-          <article class="two-paragraphs">
+          <article class="paragraphs">
             <p class="place__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -110,7 +110,7 @@
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="website__link link-hover">Facebook</a>
           </nav>
           <img src="./images/place-altai.jpg" alt="Рабочее место в лесу" class="place__image">
-          <article class="two-paragraphs">
+          <article class="paragraphs">
             <p class="place__paragraph">
               Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -126,7 +126,7 @@
             <a href="https://vk.com/baikalmile" class="website__link link-hover">https://vk.com/baikalmile</a>
           </nav>
           <img src="./images/place-winter-baikal.jpg" alt="Фото замершего байкала" class="place__image">
-          <article class="two-paragraphs">
+          <article class="paragraphs">
             <p class="place__paragraph">
               Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -143,7 +143,7 @@
             <a href="https://vodlozero.ru/" class="website__link link-hover">https://vodlozero.ru/</a>
           </nav>
           <img src="./images/place-karelia.jpg" alt="Фото водоема в лесу" class="place__image">
-          <article class="two-paragraphs">
+          <article class="paragraphs">
             <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
