--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="shorcut icon" href="./images/fav.ico">
   <link rel="apple-touch-icon" href="./images/fav.ico">
 
-  <title>Document</title>
+  <title>Путешествия по России</title>
 </head>
 
 <body class="root">
@@ -153,7 +153,7 @@
       </ul>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <div class="cover__text">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -172,6 +172,4 @@
     </nav>
     <p class="footer__copyright">© 2020. Паша Ш.</p>
   </footer>
-</body>
-
-</html>
+</body></html>
