--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
   </main>
   <footer class="footer">
     <nav class="footer__links">
-      <a class="footer__link link-hover" href="https://yandex.ru/maps">Карты</a>
-      <a class="footer__link link-hover" href="https://yandex.ru/pogoda">Погода</a>
-      <a class="footer__link link-hover" href="https://rasp.yandex.ru">Расписание</a>
-      <a class="footer__link link-hover" href="https://calendar.yandex.ru">Календарь</a>
-      <a class="footer__link link-hover" href="https://travel.yandex.ru">Путешествия</a>
+      <a class="footer__link link-hover" href="https://yandex.ru/maps" target="_blank">Карты</a>
+      <a class="footer__link link-hover" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+      <a class="footer__link link-hover" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+      <a class="footer__link link-hover" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+      <a class="footer__link link-hover" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
     </nav>
     <p class="footer__copyright">&copy; 2020. Паша Ш.</p>
   </footer>
