--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2 class="place__title">Кольский</h2>
           <div class="website">
             <p class="website__url-heading">url</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy target=" _blank"" class="website__link link-hover" target="_blank">National Geographic</a>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link link-hover" target="_blank">National Geographic</a>
           </div>
           <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
           <div>
