--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а здесь.</p>
       <img src="./images/lead-polka.jpg" alt="Карта пути на фоне окна поезда" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
@@ -162,15 +162,15 @@
     </section>
   </main>
   <footer class="footer">
-    <nav class="footer__links">
-      <a class="footer__link link-hover" href="https://yandex.ru/maps" target="_blank">Карты</a>
-      <a class="footer__link link-hover" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-      <a class="footer__link link-hover" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-      <a class="footer__link link-hover" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-      <a class="footer__link link-hover" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+    <nav>
+      <ul class="footer__links">
+        <li class="footer__link link-hover"><a class="link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__link link-hover"><a class="link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__link link-hover"><a class="link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__link link-hover"><a class="link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__link link-hover"><a class="link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+      </ul>
     </nav>
     <p class="footer__copyright">&copy; 2020. Паша Ш.</p>
   </footer>
-</body>
-
-</html>
+</body></html>
