--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </li>
       </ul>
     </section>
-    <section class="cover">
+    <section clas="cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -162,15 +162,13 @@
   <footer class="footer">
     <nav>
       <ul class="footer__links">
-        <li class="footer__link link-hover"><a class="link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-        <li class="footer__link link-hover"><a class="link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-        <li class="footer__link link-hover"><a class="link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-        <li class="footer__link link-hover"><a class="link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-        <li class="footer__link link-hover"><a class="link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        <li class="footer__li"><a class="footer__link link-hover" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__li"><a class="footer__link link-hover" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__li"><a class="footer__link link-hover" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__li"><a class="footer__link link-hover" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__li"><a class="footer__link link-hover" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">&copy; 2020. Паша Ш.</p>
   </footer>
-</body>
-
-</html>
+</body></html>
