--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </li>
       </ul>
     </section>
-    <section clas="cover">
+    <section class="cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -171,4 +171,6 @@
     </nav>
     <p class="footer__copyright">&copy; 2020. Паша Ш.</p>
   </footer>
-</body></html>
+</body>
+
+</html>
